--- a/src/main/resources/templates/add-concert-form.html
+++ b/src/main/resources/templates/add-concert-form.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Concert</title>
 </head>
 <body>
     <h1>Add Concert</h1>
-    <!-- add form for adding concert-->
 
+    <form th:action="@{/concerts}" th:object="${concert}" method="post">
+        <label for="title">Title:</label>
+        <input type="text" id="title" th:field="*{title}" required><br><br>
+
+        <label for="venue">Venue:</label>
+        <input type="text" id="venue" th:field="*{venue}" required><br><br>
+
+        <label for="date">Date:</label>
+        <input type="date" id="date" th:field="*{date}" required><br><br>
+
+        <button type="submit">Save Concert</button>
+    </form>
+
+    <br>
+    <a th:href="@{/concerts}">Back to Concert List</a>
 </body>
 </html>
