--- a/src/main/resources/templates/add-concert-form.html
+++ b/src/main/resources/templates/add-concert-form.html
@@ -11,8 +11,8 @@
         <label for="title">Title:</label>
         <input type="text" id="title" th:field="*{title}" required><br><br>
 
-        <label for="venue">Venue:</label>
-        <input type="text" id="venue" th:field="*{venue}" required><br><br>
+        <label for="description">Description:</label>
+        <input type="text" id="description" th:field="*{description}" required><br><br>
 
         <label for="date">Date:</label>
         <input type="date" id="date" th:field="*{date}" required><br><br>
